--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
             wyczuwam, wyczuwam Cię 
             w zapachu ubrań.
         </p>
+        <p>
+            A niebo znów na głowę spada mi. 
+            I nadziei coraz mniej na słońce.
+            Tak trudno jest zasypiać, budzić się, 
+            gdy imię Twoje echem odbija się od ścian. 
+        </p>
     </body>
 </html>
