Add chorus and 3rd verse

--- a/index.html
+++ b/index.html
@@ -20,5 +20,25 @@
             Tak trudno jest zasypiać, budzić się, 
             gdy imię Twoje echem odbija się od ścian. 
         </p>
+        <p>
+            A te dni ciszy które, które dzielą nas, 
+            podpowiadają mi złe obrazy.
+            Muszę to przespać, przeczekać, 
+            przeczekać trzeba mi, 
+            a jutro znowu pójdziemy nad rzekę. 
+        </p>
+        <p>
+            Jedyny mój, pora kończyć już. 
+            Pielęgnuj obraz mój w swym sercu. 
+            Jestem wodą, do której raz włożywszy dłoń 
+            nigdy nie zdołasz jej zapomnieć 
+        </p>
+        <p>
+            A te dni ciszy które, które dzielą nas, 
+            podpowiadają mi złe obrazy.
+            Muszę to przespać, przeczekać, 
+            przeczekać trzeba mi, 
+            a jutro znowu pójdziemy nad rzekę.
+        </p>
     </body>
 </html>
