Add styles for the website

--- a/index.html
+++ b/index.html
@@ -3,42 +3,46 @@
     <head>
         <meta charset="UTF-8">
         <title>My website title</title>
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <h1>Hey - List</h1>
-        <p>
-            Jedyny mój, to zaledwie kilka dni, 
-            a ja nie mieszczę łez, zagryzam wargi. 
-            Dotykam się, jak to zwykłeś robić Ty, 
-            wyczuwam, wyczuwam Cię 
-            w zapachu ubrań.
-        </p>
-        <p>
-            A niebo znów na głowę spada mi. 
-            I nadziei coraz mniej na słońce.
-            Tak trudno jest zasypiać, budzić się, 
-            gdy imię Twoje echem odbija się od ścian. 
-        </p>
-        <p>
-            A te dni ciszy które, które dzielą nas, 
-            podpowiadają mi złe obrazy.
-            Muszę to przespać, przeczekać, 
-            przeczekać trzeba mi, 
-            a jutro znowu pójdziemy nad rzekę. 
-        </p>
-        <p>
-            Jedyny mój, pora kończyć już. 
-            Pielęgnuj obraz mój w swym sercu. 
-            Jestem wodą, do której raz włożywszy dłoń 
-            nigdy nie zdołasz jej zapomnieć 
-        </p>
-        <p>
-            A te dni ciszy które, które dzielą nas, 
-            podpowiadają mi złe obrazy.
-            Muszę to przespać, przeczekać, 
-            przeczekać trzeba mi, 
-            a jutro znowu pójdziemy nad rzekę.
-        </p>
+        <section class="container">
+            <div class="song">
+                <h1 class="song__title">Hey - List</h1>
+                <p class="song__verse">
+                    Jedyny mój, to zaledwie kilka dni, 
+                    a ja nie mieszczę łez, zagryzam wargi. 
+                    Dotykam się, jak to zwykłeś robić Ty, 
+                    wyczuwam, wyczuwam Cię w zapachu ubrań.
+                </p>
+                <p class="song__verse">
+                    A niebo znów na głowę spada mi. 
+                    I nadziei coraz mniej na słońce.
+                    Tak trudno jest zasypiać, budzić się, 
+                    gdy imię Twoje echem odbija się od ścian. 
+                </p>
+                <p class="song__chorus">
+                    A te dni ciszy które, które dzielą nas, 
+                    podpowiadają mi złe obrazy.
+                    Muszę to przespać, przeczekać, 
+                    przeczekać trzeba mi, 
+                    a jutro znowu pójdziemy nad rzekę. 
+                </p>
+                <p class="song__verse">
+                    Jedyny mój, pora kończyć już. 
+                    Pielęgnuj obraz mój w swym sercu. 
+                    Jestem wodą, do której raz włożywszy dłoń 
+                    nigdy nie zdołasz jej zapomnieć 
+                </p>
+                <p class="song__chorus">
+                    A te dni ciszy które, które dzielą nas, 
+                    podpowiadają mi złe obrazy.
+                    Muszę to przespać, przeczekać, 
+                    przeczekać trzeba mi, 
+                    a jutro znowu pójdziemy nad rzekę.
+                </p>
+            </div>
+        </section>
     </body>
 </html>
