Change website title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl-PL">
     <head>
         <meta charset="UTF-8">
-        <title>My website title</title>
+        <title>Song lyrics</title>
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
