Add class for body

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
-    <body>
+    <body class="content">
         <section class="container">
             <div class="song">
                 <h1 class="song__title">Hey - List</h1>
